overflow fix

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ h1.subtitle {
 
 
 .new-horo-h1 {
-  font-size: 77px;
+  font-size: 66px;
   max-width: 100vw;
   max-height: 100vh;
   /* color: midnightblue; */
@@ -116,7 +116,7 @@ h1.subtitle {
   border: navy solid 5px;
   padding: 33px;
   background-color: #fff;
-  overflow: contain;
+  overflow: hidden;
 
   color: midnightblue;
   text-shadow:
